--- a/src/components/Greeting/Greeting.css
+++ b/src/components/Greeting/Greeting.css
@@ -1,9 +1,17 @@
+.guestGreeting,
 .greetingText {
+  border-radius: 10px;
+  max-width: 300px;
   padding: 20px;
+}
+
+.greetingText {
   background-color: darkgray;
   font-size: 1.25rem;
   font-weight: bold;
   font-style: italic;
-  border-radius: 10px;
-  max-width: 300px;
+}
+
+.guestGreeting {
+  background-color: blanchedalmond;
 }
